--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "immer": "^7.0.1",
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "redux": "^4.0.5"
   }
 }
