--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "immer": "^7.0.1",
     "lodash": "^4.17.15",
     "react": "^16.13.1",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6"
   }
 }
