--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "lodash": "^4.17.15",
     "react": "^16.13.1",
     "redux": "^4.0.5",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^1.1.3",
+    "redux-thunk": "^2.3.0"
   }
 }
